-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.9 2007-05-25 19:39:14 pwessel Exp $
-----------------------------------------------------------------------------------------

2007-05-25	pwessel
      * psxy[z].c:		Now, both symbols and polygons can be filled with patterns
      				Also, psxyz now honors -W+ etc in multisegment headers
      * gmt_plot.[ch]:		New GMT_<symbol> () functions to help with this.
      * mex/configure.in	FOr Intel Macs, must look in maci, not mac

2007-05-24	remko
	* gmt_vector.[ch] (GMT_fix_up_path): Intermediate longitudes now wrapped based on segment end
				not on map extent. "greenwich" argument became superfluous and was
				removed. Argument "step" was found to be in degrees, not in inches as
				some calling programs assumed.
	* gmt_shore.[ch] (GMT_prep_polygons): Argument "greenwich" was removed since GMT_fix_up_path does not
				need it anymore.
	* gmtselect.c, grdlandmask.c: Removed "greenwich" argument of GMT_fix_up_path and/or GMT_prep_polygons
	* gmt_support.c, grdmask.c, pscoast.c, psxy.c: Removed "greenwich" argument of GMT_fix_up_path and/or
				GMT_prep_polygons and changed "step" from inches of map projection to spherical
				degrees.
	* test/psxy/hexagone*:	Test added to illustrate the complications with GMT_fix_up_path.
	* psimage.c:		-I option had become always active

2007-05-22	pwessel
	* psxy.c:		More careful setting of the "greenwich" variable to prevent polygon wrap
	* gmt_map.c:		New function GMT_set_greenwich() which returns TRUE or FALSE.

2007-05-18	pwessel
	* pslib.c:		ps_text can now use @_, @: and @; sequences
	* pslib.txt:		Updated the documentation
	* gmt_support.c:	Added function GMT_enforce_rgb_triplets to scan for @;color;
      				and replace it with r/g/b if given by name, gray, h-s-v etc.
	* gmt_init.c:		Applies GMT_enforce_rgb_triplets to header and axes labels